внес изменения в index.html для проверки деплоя

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <header class="header">Шапка</header>
-  <p>Hello, World111!!!</p>
+  <p>Hello, World111</p>
 </body>
 
 </html>
